# gel-python

./: .editorconfig  .gitignore  Makefile  README.rst  flake.nix  pyproject.toml  setup.py
.github/workflows/: install-gel.sh  release.yml  tests.yml
gel/: __init__.py  _testbase.py  _testbase_schema.py  abstract.py  asyncio_client.py  base_client.py  blocking_client.py  cli.py  con_utils.py  credentials.py  options.py  polyfills.py  qb.py  querybuilder.py  transaction.py
gel/_internal/: _atomic.py  _cache.py  _captive_server.py  _collections_extras.py  _dataclass_extras.py  _deferred_import.py  _dirhash.py  _dirsync.py  _dis_bool.py  _dlist.py  _hybridmethod.py  _import_extras.py  _inspect_extras.py  _is_overload.py  _lazyclassprop.py  _lazyprop.py  _namespace.py  _platform.py  _polyfills.py  _save.md  _save.py  _schemapath.py  _server.py  _tracked_list.py  _type_expression.py  _typing_dispatch.py  _typing_eval.py  _typing_inspect.py  _typing_parametric.py  _typing_protos.py  _unsetid.py  _utils.py  _version.py  _xmethod.py  arch.md  dlist_modes.md  ruff.toml
gel/_internal/_auth/: _base.py  _builtin_ui.py  _email_password.py  _magic_link.py  _oauth.py  _pkce.py  _token_data.py
gel/_internal/_codegen/: _generator.py  _module.py
gel/_internal/_edgeql/: __init__.py  _keywords.py  _quoting.py  _schema.py  _tokens.py
gel/_internal/_polyfills/: _strenum.py  _strenum_impl.py  _taskgroup.py
gel/_internal/_qb/: __init__.py  _abstract.py  _descriptors.py  _expressions.py  _generics.py  _protocols.py  _reflection.py  _render.py
gel/_internal/_qbmodel/: _pydantic.py
gel/_internal/_reflection/: __init__.py  _base.py  (+11 more)
gel/ai/: __init__.py  core.py  metadata_filter.py  vectorstore.py
gel/auth/: __init__.py  base.py  builtin_ui.py  email_password.py  magic_link.py  oauth.py  pkce.py  token_data.py
gel/codegen/: base.py  cli.py  generator.py  models.py  queries.py  ruff.toml  test.py
gel/compatibility/: __init__.py  clihelper.py  pydmodels.py
gel/datatypes/: config_memory.pyx  datatypes.pyi  date_duration.pxd  date_duration.pyx  enum.pyx  relative_duration.pxd  relative_duration.pyx
gel/errors/: _base.py
gel/fastapi/: __init__.py  client.py  utils.py
gel/models/: __init__.py  expr.py  lists.py  pydantic.py  pydantic_.py  ruff.toml  types.py  unsetid.py
gel/orm/: cli.py  introspection.py  sqla.py  sqlmodel.py
gel/protocol/: blocking_proto.pyx  protocol.pxd  protocol.pyx
tests/: __init__.py  nested_collections.py  test_array.py  test_async_model.py  test_async_query.py  test_async_retry.py  test_async_tx.py  test_asyncio_client.py  test_blocking_client.py  test_codegen.py  test_con_utils.py  test_connect.py  test_credentials.py  test_dataclass_extras.py  test_datetime.py  test_dis_bool.py  test_distinct_list.py  test_django_basic.py  test_enum.py  test_globals.py  test_is_overload.py  test_link_set.py  test_link_set_abstract.py  test_link_set_models.py  test_link_with_props_set.py  test_memory.py  test_model_generator.py  test_model_sync.py  test_namedtuples.py  test_postgis.py  test_profiling.py  test_proto.py  test_pydantic_orm.py  test_qb.py  test_schemapath.py  test_sourcecode.py  test_sqla_basic.py  test_sqla_features.py  test_sqlmodel_basic.py  test_sqlmodel_features.py  (+6 more)
tests/ai/: test_ai_metadata_filter.py  test_ai_vectorstore.py
tests/dbsetup/: base.esdl  chemistry.esdl  chemistry.gel  empty.gel  empty_ai.gel  link_set.gel  orm.edgeql  orm.gel  orm_other.edgeql  orm_other.gel  orm_qb.edgeql  orm_qb.gel  pydantic.gel
tools/: gen_init.py  gen_models.py  make_import_shims.py
(+85 files in other folders)
