[project]
name = "gel"
description = "Official Gel Python Driver"
authors = [
    { name = "Gel Data Inc.", email = "hello@geldata.com" },
    { name = "Gel Contributors" },
]
requires-python = ">=3.8.0"
readme = "README.rst"
license = {text = "Apache License, Version 2.0"}
dynamic = ["version"]
keywords = ["gel", "edgedb", "database", "postgres"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ['certifi>=2021.5.30; platform_system == "Windows"']

[project.optional-dependencies]
test = [
    'pytest>=3.6.0',
    'pycodestyle~=2.11.1',
    'pyflakes~=3.2.0',
    'flake8-bugbear~=24.4.26',
    'flake8~=7.0.0',
    'uvloop>=0.15.1; platform_system != "Windows"',
]
sqltest = [
    'SQLAlchemy>=2.0.0',
    'sqlmodel>=0.0.22',
    'Django>=5.1.3',
    'psycopg2-binary>=2.9.10',
]
doc = [
    'sphinx~=4.2.0',
    'sphinxcontrib-asyncio~=0.3.0',
    'sphinx_rtd_theme~=1.0.0',
]
ai = ['httpx~=0.27.0', 'httpx-sse~=0.4.0']

[project.urls]
homepage = "https://www.geldata.com"
source = "https://github.com/geldata/gel-python"
documentation = "https://docs.geldata.com/reference/clients/python"
issues = "https://github.com/geldata/gel-python/issues"

[project.scripts]
edgedb-py = "gel.codegen.cli:main"
gel-py = "gel.codegen.cli:main"
gel-orm = "gel.orm.cli:main"
gel = "gel.cli:main"

[build-system]
requires = ["Cython(>=3.0.11,<3.1.0)", "setuptools >= 67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["gel", "gel.*", "edgedb", "edgedb.*"] } }
zip-safe = false

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]

# ========================
#          MYPY
# ========================

[tool.mypy]
exclude = [
    "^.eggs",
    "^.github",
    "^.vscode",
    "^build",
    "^dist",
    "^docs",
    "^target",
]
files = ["edgedb", "gel", "tests"]
python_version = "3.8"
follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
local_partial_types = true


# ========================
#          BLACK
# ========================
[tool.black]
line-length = 79
target-version = ["py38"]

# ========================
#           RUFF
# ========================
[tool.ruff]
line-length = 79
indent-width = 4
exclude = [".github", ".git", "build", "dist", ".eggs", "generated"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "B"]
ignore = [
    "F541", # f-string without any placeholders
]

# ========================
#          PYTEST
# ========================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--capture=no --assert=plain --strict --tb native"
testpaths = ["tests"]
filterwarnings = "default"
